--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "@material-ui/icons": "^1.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-google-charts": "^3.0.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "recharts": "^1.1.0",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
