--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,14 @@
     "react-dom": "^16.4.1",
     "react-google-charts": "^3.0.5",
     "react-pdf": "^3.0.5",
+    "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "recharts": "^1.1.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^5.1.1",
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
